--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/theme-green/css/changes.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/theme-green/css/changes.css
@@ -1,315 +1,212 @@
 /*
 # header
 */
-
-#nav_main > ul > li:last-child {
+#nav_main>ul>li:last-child {
 	float: left;
 }
 
-
-
-.siteSearch form{
-	float:left;
+.siteSearch form {
+	float: left;
 }
 
-.siteSearch .advanced{
-	float:left;
+.siteSearch .advanced {
+	float: left;
 	margin-left: 10px;
 	line-height: 30px;
 }
 
-
-
-
 /*
 # homepage
 */
-
-.span-24 > .scroller ul li {
-		width: 150px;
+.span-24>.scroller ul li {
+	width: 150px;
 }
 
-.scrollerProduct .thumb{
-	height:140px;
+.scrollerProduct .thumb {
+	height: 140px;
 }
 
 .scrollerProduct  .thumb img {
 	max-height: 140px;
 	max-width: 140px;
 	width: auto;
-	height:auto;
+	height: auto;
 }
 
-
-.yCmsContentSlot.span-6.thumbnail_detail .simple_disp-img:first-child{
-	margin-bottom:10px;
+.yCmsContentSlot.span-6.thumbnail_detail .simple_disp-img:first-child {
+	margin-bottom: 10px;
 }
 
-.section1 .simple_disp-img{
-		margin: 0;
+.section1 .simple_disp-img {
+	margin: 0;
 }
-
-
-
 
 /*
 # category
 */
-
 .productList .productListItem .thumb img {
 	width: 96px;
 }
 
-
-
-.productList .productListItem .stars,
-.productList .productListItem .details,
-.productList .productListItem .cart,
-.productList .productListItem .product-classification,
-.productList .productListItem .lowStock,
-.productList .productListItem .head {
-	margin-left:  110px;
+.productList .productListItem .stars,.productList .productListItem .details,.productList .productListItem .cart,.productList .productListItem .product-classification,.productList .productListItem .lowStock,.productList .productListItem .head
+	{
+	margin-left: 110px;
 }
-
 
 .productList .productListItem .cart {
 	text-align: right;
 }
 
-
-
 /*
 # product
 */
-
-
 .productImage .productImagePrimary a.productImagePrimaryLink img {
-		max-height: 420px;
-		max-width: 420px;
-		width: auto;
-		height:auto;
+	max-height: 420px;
+	max-width: 420px;
+	width: auto;
+	height: auto;
 }
 
-
-.productDescription .stock_message{
-	 display: inline;
+.productDescription .stock_message {
+	display: inline;
 }
-
-
-
-
 
 /*
 	button color
 */
-button.pickupInStoreButton,
-button.negative, a.button.negative {
-		color:#169e08;
-		border-color: #169e08;
+button.pickupInStoreButton,button.negative,a.button.negative {
+	color: #169e08;
+	border-color: #169e08;
 }
 
-button.addToCartButton,
-#storeFinder .searchPane .findStoresNearMe,
-button.positive, a.button.positive {
-		background-color:#169e08;
-		border-color: #169e08;
+button.addToCartButton,#storeFinder .searchPane .findStoresNearMe,button.positive,a.button.positive
+	{
+	background-color: #169e08;
+	border-color: #169e08;
 }
-
-
-
-
-
-
 
 button.checkoutButton {
 	font-size: 140%;
 	margin-top: 20px;
 }
 
-
-
-
-
-
-
-
-#savedPaymentList .paymentEntry  {
-		min-height:188px;
+#savedPaymentList .paymentEntry {
+	min-height: 188px;
 }
 
-
-#savedPaymentList .paymentList ul{
-	width:50%;
+#savedPaymentList .paymentList ul {
+	width: 50%;
 }
-
 
 #savedPaymentList .paymentEntry button {
-		margin: 20px;
+	margin: 20px;
 }
 
-
-
-
-
-
-
-#savedAddressList  button{
-	margin-top:8px;
+#savedAddressList  button {
+	margin-top: 8px;
 }
 
-#savedAddressList  .addressEntry{
-	width:380px;
+#savedAddressList  .addressEntry {
+	width: 380px;
 }
 
-
-#savedAddressList  {
-	max-height:400px;
-	overflow-y:auto;
-	overflow-x:hidden;
+#savedAddressList {
+	max-height: 400px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
-
-
-
 
 .summaryOverlay fieldset.cardDate legend {
 	margin: 7px 0 5px;
 }
 
-
-
-td.priceRow{
+td.priceRow {
 	text-align: right;
 }
-
-
-
-
-
-
-
 
 button.positive[disabled] {
 	text-transform: uppercase;
 }
 
-
-
-.footer .links{ 
-	float: left; 
+.footer .links {
+	float: left;
 	margin: 0 0 10px 0;
+}
 
-} 
+.footer .links ul.left_col {
+	float: left;
+	width: 237px;
+}
 
-
-.footer .links ul.left_col{ 
-	float: left; 
-	width:237px;
-} 
-
-
-.footer .links ul.right_col{ 
-	float: right; 
-	width:237px;
-} 
-
-
-
-
-
-
-
-
-
+.footer .links ul.right_col {
+	float: right;
+	width: 237px;
+}
 
 /* volume-prices */
-
-table.volume-prices thead th{
+table.volume-prices thead th {
 	font-weight: bold;
 	border-bottom: 1px dotted #979797;
-	line-height:25px;
+	line-height: 25px;
 }
 
-table.volume-prices tbody td{
+table.volume-prices tbody td {
 	border-bottom: 1px dotted #979797;
-	line-height:20px;
+	line-height: 20px;
 }
 
-
-
-
-
-.volumePricesFlag{
-	float:right;
-	padding:5px 0 0 10px;
+.volumePricesFlag {
+	float: right;
+	padding: 5px 0 0 10px;
 }
 
-
-
-
-
-
-.productDetailsPanel .productDescription .qty label{
-	width:57px;
+.productDetailsPanel .productDescription .qty label {
+	width: 57px;
 	display: block;
 	float: left;
 }
 
-
-
-
-
-
-
-
-#storeFinder .storeResultList .storeResultTable .storeMarker{
+#storeFinder .storeResultList .storeResultTable .storeMarker {
 	float: left;
 	margin: 0 10px 0 0;
 }
 
-#storeFinder .storeResultList .storeResultTable .storeImage{
+#storeFinder .storeResultList .storeResultTable .storeImage {
 	float: left;
 	margin: 0 10px 0 0;
 }
 
-
-#storeFinder .storeResultList .storeResultTable td a.button.right{
+#storeFinder .storeResultList .storeResultTable td a.button.right {
 	margin-top: 0;
 }
 
-
-.new_item_quick_order_form
-{
-	margin-top:30px;
+.new_item_quick_order_form {
+	margin-top: 30px;
 }
 
-.obsolete_error
-{
- float:left;
- color:#ed5f69;
-}
-.moq_error
-{
- float:left;	
- color:#ed5f69;  
+.obsolete_error {
+	float: left;
+	color: #ed5f69;
 }
 
-.display_none
-{
-	display:none;
+.moq_error {
+	float: left;
+	color: #ed5f69;
 }
 
-.quickorder_errormsg
-{
-	color:red;
-	font-size:10px;
+.display_none {
+	display: none;
 }
 
-.red_border_input
-{
-	border:1px solid red;
+.quickorder_errormsg {
+	color: red;
+	font-size: 10px;
 }
 
-.quickOrder_text_btw_txt
-{
-	margin-right:22px;
+.red_border_input {
+	border: 1px solid red;
+}
+
+.quickOrder_text_btw_txt {
+	margin-right: 22px;
 }
