--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
@@ -54,6 +54,7 @@ legend small {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
+  padding-right:581px;
 }
 .control-group input,
 .control-group button,
