UI fix order approval table alignment fix

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
@@ -178,6 +178,12 @@
     color: #06c;
 }
 
+.orderList .orderListTable tbody tr.item_order_cls td.details .itemName{
+	word-wrap: break-word;
+    width: 30px;
+	
+}
+
 
 
 
