css fix for account profile

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
@@ -237,3 +237,8 @@ div.delivery_stages .headline{
 /* new css */
 .delivery_stages{margin:20px 0!important;}
 .approvereject_fixcls{margin-top:50px !important;}
+/*css fix for Profile alignment */
+
+.accountContentPane .headline{
+	padding: 0px;
+}
