--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/energizer_main.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/energizer_main.css
@@ -76,3 +76,7 @@ a.button, button:hover{color:#ed5f69;font-weight:bold;} */
 
 table.orderListTable th{color:#436eee;}
 .new_item_quick_order_form input,.new_item_quick_order_form form{float:left; margin-right:15px;}
+
+.facet_block li {
+	padding-top: 10px;
+}
