--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
@@ -324,7 +324,9 @@ width: 300px;
 #placeOrder .control-group label{
 	width:450px;
 }
-
+#placeOrderForm2 .control-group label{
+	width:354px;
+}
 
 
 
