--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
@@ -254,3 +254,6 @@ div.delivery_stages .headline{
 .accountContentPane .accountnavigationcollectioncomponent .accountNav{
 	  height: auto;
 }
+.accountContentPane .accountnavigationcollectioncomponent .accountNav .headline{
+	color: #0b4f04;
+}
