--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/cal.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/cal.css
@@ -66,7 +66,7 @@
 /* states and images */
 .ui-icon {
 	display: block;
-	text-indent: -99999px;
+	/*text-indent: -99999px;*/
 	overflow: hidden;
 	background-repeat: no-repeat;
 }
@@ -836,7 +836,7 @@ body .ui-tooltip {
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
 	border: 1px solid #fbcb09;
-	background: #fdf5ce url(images/ui-bg_glass_100_fdf5ce_1x400.png) 50% 50% repeat-x;
+	/*background: #fdf5ce url(images/ui-bg_glass_100_fdf5ce_1x400.png) 50% 50% repeat-x;*/
 	font-weight: bold;
 	color: #c77405;
 }
