--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-quoteOrderApprovalBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-quoteOrderApprovalBody.vm
@@ -209,7 +209,13 @@
 															</td>
 															<td>&nbsp;</td>
 															<td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">
+																#if(${ctx.order.deliveryAddress.title})
+																#if(${ctx.order.deliveryAddress.firstName})
+																	#if(${ctx.order.deliveryAddress.lastName})
 																${ctx.order.deliveryAddress.title} ${ctx.order.deliveryAddress.firstName} ${ctx.order.deliveryAddress.lastName}<br/>
+																#end
+																#end
+																#end
 																${ctx.order.deliveryAddress.line1}<br/>
 																#if(${ctx.order.deliveryAddress.line2}) ${ctx.order.deliveryAddress.line2}<br/>#end
 																${ctx.order.deliveryAddress.town}<br/>
