--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
@@ -327,10 +327,16 @@ width: 300px;
 #placeOrderForm2 .control-group label{
 	width:354px;
 }
+.companyContentPane{width:500px !important;}
+#b2BCustomerForm{width:65%;}
+#b2BCustomerForm .control-group label,#b2BCustomerForm .control-group select,#b2BCustomerForm .control-group input{font-size:0.9em;width:99%;}
+#b2BCustomerForm .control-group select,#b2BCustomerForm .control-group input{height:18px;}
+#b2BCustomerForm  legend{font-size:1em;font-weight:bold; width:125%;}
+#b2BCustomerForm fieldset div{clear:both;float:left;height:25px;width:74%;}
+#b2BCustomerForm .control-group fieldset label{float:left;width:50%;margin:0;padding:0;width:220px;}
+#b2BCustomerForm .control-group fieldset input{float:right;width:10%;}
 
-
-
-
+#updateProfileForm .control-group select{width:250px;}
 
 
 
