--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/userLogin.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/userLogin.css
@@ -193,6 +193,8 @@ div.secure_container_holder h2{
 
 .userLogin {
 	  border: 1px dotted #A5A5A5;
-	  padding: 0 20px 10px 20px;
-	  width: 86%;
+	 /* padding: 0 20px 10px 20px;*/
+      margin:0 auto;
+      margin-left:34%;
+	  width: 45%;
 	}
